# Campus-Security-and-Evacuation-System

./: .env.example  .gitattributes  .gitignore  PROJECT_STATUS_2025-04-05.md  README.md  deployment.md  deployments.md  docker-compose.yml  milestones.md  notifications.json  project_overview.md  pytest.ini  requirements-model.txt  requirements.txt  startup.ps1  startup.sh
Arduino Uno R4 Client/: README.md  TESTING_GUIDE.md  connect_to_wifi.py  platformio.ini
ArduinoMega/: README.md  platformio.ini
Diagrams and Documentation/: architecture.md  errors.md  flow.md  sequence-diagram.md  session_diagrams.md
ESP32/: platformio.ini  sdkconfig.freenove_esp32_wrover  todo.md
ESP32-Arduino-Framework-NOFACEDETECTIOn/: README.md  platformio.ini
ESP32-CAM/: platformio.ini
ESP32-CAM Client/: connect_to_wifi.py  esp32-troubleshooting-guide.md  esp_plan.md  platformio.ini
ESP32-WROVER/: README.md  platformio.ini
ESP32CAMClient/: CMakeLists.txt
ESP32CAMClient/main/: CMakeLists.txt  camera_manager.cpp  camera_manager.hpp  main.cpp  mqtt_manager.cpp  mqtt_manager.hpp  state_machine.cpp  state_machine.hpp  wifi_manager.cpp  wifi_manager.hpp
MKRWiFi1010/: README.md  platformio.ini
ServoArduinoUno/: README.md  platformio.ini
api/: Dockerfile  README.md  app.py  config.py  docker-compose.yml  filters.py  requirements.txt  seed.py  session_manager.py  supabase_client.py
database/: docker-compose.yml  init.sql  initial_data.md  sample_data.sql
diagrams/: flow.md  notification-class-diagram.md  notification_diagrams.md  sequence-diagram.md  system-overview.md
(+315 files in other folders)
